# Nexus

./: README.md  build.bat  build.ps1  build.yaml  pubspec.yaml
example/: pubspec.yaml
example/attractor/: README.md  pubspec.yaml
example/attractor/lib/: component_registration.dart  events.dart  game_painter.dart  main.dart  particle_painter.dart
example/attractor/web/: index.html  manifest.json
example/attractor/windows/: CMakeLists.txt
example/counter/: pubspec.yaml
example/counter/lib/: counter_cubit.dart  main.dart  router.dart
example/dashboard/lib/: main.dart
example/gpu_simulation/lib/: main.dart
example/lib/: counter_module.dart  main.dart  router.dart
example/lib/counter_module/: counter_module.dart
example/space_shooter/lib/: main.dart
example/space_shooter/windows/: CMakeLists.txt
lib/: builder.dart  nexus.dart
lib/src/builder/: binary_builder.dart  gpu_shader_builder.dart  wgsl_transpiler.dart
lib/src/components/: animation_component.dart  bloc_component.dart  clickable_component.dart  counter_state_component.dart  gameplay_components.dart  lifecycle_component.dart  morphing_component.dart  position_component.dart  shape_path_component.dart  styleable_component.dart  tags_component.dart  theme_component.dart  timer_component.dart  velocity_component.dart  widget_component.dart
lib/src/compute/: gpu_buffer.dart  gpu_context.dart  gpu_context_native.dart  gpu_context_web.dart  gpu_system.dart
lib/src/core/: component.dart  entity.dart  event_bus.dart  nexus_module.dart  nexus_world.dart  system.dart
lib/src/events/: input_events.dart  pointer_events.dart  shape_events.dart  theme_events.dart
lib/src/flutter/: builder_tags.dart  entity_widget_builder.dart  nexus_isolate_manager.dart  nexus_manager.dart  nexus_single_thread_manager.dart  nexus_widget.dart
lib/src/routing/: nexus_route.dart
lib/src/systems/: advanced_input_system.dart  animation_system.dart  archetype_system.dart  attraction_system.dart  bloc_system.dart  damage_system.dart  flutter_rendering_system.dart  hardware_input_system.dart  (+15 more)
rust_core/: Cargo.toml
rust_core/src/: lib.rs  shader.wgsl
test/: nexus_test.dart
tool/builder/: transpiler_builder.dart
(+78 files in other folders)
