[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"

# This section creates the native binary (.dll, .so, etc.)
[lib]
crate-type = ["cdylib"] 

[dependencies]
wgpu = "0.19"
pollster = "0.3"
env_logger = "0.11"
bytemuck = { version = "1.14", features = ["derive"] }
futures-intrusive = "0.5"
log = "0.4"

# --- NEW SECTION FOR WASM ---
# These dependencies are only used when compiling for the web.
[target.'cfg(target_arch = "wasm32")'.dependencies]
# The bridge between Rust and JavaScript/WASM
wasm-bindgen = "0.2"
# Provides access to web APIs like console.log
web-sys = { version = "0.3", features = ["console"] }
# Allows Rust futures to work in a WASM environment
wasm-bindgen-futures = "0.4"
