[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"

# This section creates the native binary (.dll, .so, etc.)
[lib]
crate-type = ["cdylib"] 

[dependencies]
# --- FINAL FIX: Using the latest stable wgpu version ---
# This aligns the project with modern WebGPU specifications and is crucial
# for resolving compatibility errors with the browser/driver.
wgpu = "0.20.1" 
pollster = "0.3"
env_logger = "0.11"
bytemuck = { version = "1.14", features = ["derive"] }
futures-intrusive = "0.5"
log = "0.4"

# These dependencies are only used when compiling for the web.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
wasm-bindgen-futures = "0.4"
